--- a/index.html
+++ b/index.html
@@ -10,7 +10,19 @@
 </head>
 <body>
 <div id="app" >
-    {{message}}
+    <div class="container mt-5" >
+        <div class="row" >
+            <div class="col-12" >
+                <div class="d-flex justify-content-center " >
+                    <ul class="list-unstyled" >
+                        <li class="list-item" v-for="(item,index) in todo">
+                            {{index}} - {{item.text}}
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <script type="text/javascript"  src="./js/script.js"></script>
