--- a/index.html
+++ b/index.html
@@ -13,12 +13,19 @@
     <div class="container mt-5" >
         <div class="row" >
             <div class="col-12" >
-                <div class="d-flex justify-content-center " >
+                <div class="d-flex justify-content-center card" >
                     <ul class="list-unstyled" >
                         <li class="list-item" v-for="(item,index) in todo">
                             {{index}} - {{item.text}}
                         </li>
                     </ul>
+                </div>
+            </div>
+        </div>
+        <div class="row" >
+            <div class="col-12" >
+                <div class="d-flex w 100" >
+                    <input type="text" class="form-control">
                 </div>
             </div>
         </div>
