--- a/index.html
+++ b/index.html
@@ -22,10 +22,11 @@
                 </div>
             </div>
         </div>
-        <div class="row" >
+        <div class="row mt-2" >
             <div class="col-12" >
-                <div class="d-flex w 100" >
-                    <input type="text" class="form-control">
+                <div class="d-flex w-100" >
+                    <input type="text" class="form-control" placeholder="Aggiungi un nuovo task" v-model="newTask" @keyup.enter="addTask">
+                    <button class="btn btn-primary mx-1" @click="addTask" >Aggiungi</button>
                 </div>
             </div>
         </div>
