--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Document</title>
 </head>
 <body>
@@ -13,12 +14,18 @@
     <div class="container mt-5" >
         <div class="row" >
             <div class="col-12" >
-                <div class="d-flex justify-content-center card" >
+                <div class="d-flex justify-content-around card" >
                     <ul class="list-unstyled" >
                         <li class="list-item" v-for="(item,index) in todo">
                             {{index}} - {{item.text}}
+                            <button class="button"  @click="removeTask(index)">
+                                <i class="fa solid fa-trash"></i>
+                            </button>
                         </li>
                     </ul>
+                    <div>
+                        
+                    </div>
                 </div>
             </div>
         </div>
