--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container mt-5" >
         <div class="row" >
             <div class="col-12" >
-                <div class="d-flex justify-content-around card" >
+                <div class="d-flex justify-content-around card w-50" >
                     <ul class="list-unstyled" >
                         <li class="list-item" v-for="(item,index) in todo">
                             {{index}} - {{item.text}}
@@ -30,8 +30,8 @@
             </div>
         </div>
         <div class="row mt-2" >
-            <div class="col-12" >
-                <div class="d-flex w-100" >
+            <div class="col-6" >
+                <div class="d-flex" >
                     <input type="text" class="form-control" placeholder="Aggiungi un nuovo task" v-model="newTask" @keyup.enter="addTask">
                     <button class="btn btn-primary mx-1" @click="addTask" >Aggiungi</button>
                 </div>
