--- a/index.html
+++ b/index.html
@@ -12,14 +12,12 @@
 <body>
 <div id="app" >
     <div class="container mt-5" >
-        <div class="row text-center" >
-            <div class="col-8" >
-                <h3>Todo List</h3>
-            </div>
-        </div>
         <div class="row" >
             <div class="col-8" >
-                <div class="card " >
+                <div class="card" >
+                    <div class="card-header w-100 text-center" >
+                        <h3>Todo List</h3>
+                    </div>
                     <ul class="list-unstyled w-75" >
                         <li class="list-item" v-for="(item,index) in todo" @click="check(index)" :class="item.done ? 'text-linethrough' : '' ">
                             {{index}} - {{item.text}}
