aggiunto "+1" all'index per far partire li da "1"

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     </div>
                     <ul class="list-unstyled w-75" >
                         <li class="list-item" v-for="(item,index) in todo" @click="check(index)" :class="item.done ? 'text-linethrough' : '' ">
-                            {{index}} - {{item.text}}
+                            {{index + 1}} - {{item.text}}
                             <button class="button mx-3"  @click="removeTask(index)">
                                 <i class="fa-solid fa-xmark"></i>
                             </button>
